--- a/startpage.htm
+++ b/startpage.htm
@@ -63,7 +63,7 @@
 						<li><a href="https://anilist.co/user/Shiimo/animelist">anilist</a></li>
 						<li><a href="http://horriblesubs.info/">horrible subs</a></li>
 						<li><a href="https://bakabt.me/">bakabt</a></li>
-						<li><a href="https://nyaa.pantsu.cat/">nyaa</a></li>
+						<li><a href="https://nyaa.si/">nyaa</a></li>
 					</ul>
 				</div>
 			</div>
