--- a/startpage.htm
+++ b/startpage.htm
@@ -49,9 +49,9 @@
 					<ul>
 						<li><p></p></li>
 						<li><a href="https://youtube.com">youtube</a></li>
-						<li><a href="https://duolingo.com">duolingo</a></li>
-						<li><a href="https://github.com/">github</a></li>
-						<li><a href="https://reddit.com/r/unixporn">unix</a></li>
+						<li><a href="https://ebay.co.uk">ebay</a></li>
+						<li><a href="https://amazon.co.uk/">amazon</a></li>
+						<li><a href="http://911tabs.com">tabs</a></li>
 						<li><a href="http://boards.4chan.org/g/">/g/</a></li>
 					</ul>
 				</div>
