--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				// add a zero in front of numbers<10
 				m=checkTime(m);
 				s=checkTime(s);
-				document.getElementById('time').innerHTML=h+1+":"+m+":"+s;
+				document.getElementById('time').innerHTML=h+":"+m+":"+s;
 				t=setTimeout('startTime()',500);
 				}
 				function checkTime(i)
