--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<div class="favorites-list">
 					<ul>
 						<li><p></p></li>
-						<li><a href="https://app.tutanota.com/#box">tutanota</a></li>
+						<li><a href="https://mail.tutanota.com/">tutanota</a></li>
 						<li><a href="https://mail.cock.li/?_task=mail&_mbox=INBOX">cock.li</a></li>
 						<li><a href="https://mail.protonmail.com/inbox/">proton</a></li>
 						<li><a href="https://drive.google.com/drive/my-drive">drive</a></li>
