--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 					<ul>
 						<li><p></p></li>
 						<li><a href="https://mail.tutanota.com/">tutanota</a></li>
+						<li><a href="https://www.office.com">office</a></li>
 						<li><a href="https://mail.cock.li/?_task=mail&_mbox=INBOX">cock.li</a></li>
 						<li><a href="https://mail.protonmail.com/inbox/">proton</a></li>
 						<li><a href="https://drive.google.com/drive/my-drive">drive</a></li>
-						<li><a href="https://www.google.co.uk/docs/about/">docs</a></li>
 					</ul>
 				</div>
 
@@ -52,7 +52,7 @@
 						<li><a href="https://amazon.co.uk/">amazon</a></li>
 						<li><a href="https://ebay.co.uk">ebay</a></li>
 						<li><a href="http://911tabs.com">tabs</a></li>
-						<li><a href="http://boards.4chan.org/g/">/g/</a></li>
+						<li><a href="http://boards.4chan.org/lit/">/lit/</a></li>
 					</ul>
 				</div>
 
