--- a/index.html
+++ b/index.html
@@ -1,38 +1,45 @@
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+<html>
+	<head lang="en">
+		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>home~</title>
 		<link rel="stylesheet" href="style.css">
 		<meta charset="utf-8">
-
 		<script type="text/javascript">
-				function startTime()
-				{
-				var today=new Date();
-				var h=today.getHours();
-				var m=today.getMinutes();
-				var s=today.getSeconds();
-				// add a zero in front of numbers<10
-				m=checkTime(m);
-				s=checkTime(s);
-				document.getElementById('time').innerHTML=h+":"+m+":"+s;
-				t=setTimeout('startTime()',500);
-				}
-				function checkTime(i)
-				{
-				if (i<10)
-				{
-				i="0" + i;
-				}return i;
-					}
-			</script>
+			const leftPad = (s, n, ch) => {
+				s = '' + s  // Ensure s is a string.
+				if (s.length >= n) return s;
+				return [...new Array(n - s.length)].map(_ => ch).join('') + s;
+			}
 
+			const now = new Date();
+			let tzOffs = now.getTimezoneOffset();
+			tzOffs = leftPad(tzOffs, 4, '0');
+
+			const startTime = () => {
+				const today = new Date();
+				const h = today.getHours();
+				let m = today.getMinutes();
+				let s = today.getSeconds();
+				// Add a zero in front of numbers <10.
+				m = leftPad(m, 2, '0');
+				s = leftPad(s, 2, '0');
+				
+				const timeElem = document.getElementById('time')
+				timeElem.innerHTML = '<span class="hour">' + h + '</span>'
+					+ ":" + '<span class="min">' + m + '</span>'
+					+ ":" + '<span class="sec">' + s + '</span>'
+					+ '<span class="tzOffs">GMT+' + tzOffs + '</span>';
+				t = setTimeout(startTime, 500); // Refresh every 0.5s.
+			}
+
+			// Start on page load.
+			document.addEventListener("DOMContentLoaded", startTime);	
+		</script>
 	</head>
-	<body onload="startTime()">
+	<body>
 		<div class="container">
-
-			<div id="time" style="font-size: 42pt;"></div>
-
+			<div id="time"><!-- Filled by JS --></div>
 			<div class="favorites">
 				<div class="favorites-list">
 					<ul>
@@ -44,7 +51,6 @@
 						<li><a href="https://drive.google.com/drive/my-drive">drive</a></li>
 					</ul>
 				</div>
-
 				<div class="favorites-list">
 					<ul>
 						<li><p></p></li>
@@ -55,7 +61,6 @@
 						<li><a href="http://boards.4chan.org/lit/">/lit/</a></li>
 					</ul>
 				</div>
-
 				<div class="favorites-list">
 					<ul>
 						<li><p></p></li>
@@ -69,13 +74,10 @@
 			</div>
 
 			<div class="search">
-				<form method="get" action="https://google.co.uk/">
-					<input class="search-box" name="q" placeholder="search" type="text">
+				<form method="get" action="https://www.startpage.com/do/dsearch">
+					<input class="search-box" name="query" placeholder="search" type="text">
 				</form>
 			</div>
-
 		</div>
-
-
 	</body>
 </html>
