Change to more general links.

--- a/index.html
+++ b/index.html
@@ -16,28 +16,31 @@
 			<div class="favorites">
 				<div class="favorites-list">
 					<ul>
+						<!-- Hobbies/Work tools & interfaces -->
 						<li><p></p></li>
 						<li><a href="https://sr.ht/">sr.ht</a></li>
-						<li><a href="https://www.office.com">office</a></li>
+						<li><a href="https://www.office.com">365</a></li>
 						<li><a href="https://github.com/">github</a></li>
-						<li><a href="https://code.knutsen.co/">code</a></li>
-						<li><a href="https://drive.google.com/drive/my-drive">drive</a></li>
+						<li><a href="https://www.epik.com/">epik</a></li>
+						<li><a href="https://www.vultr.com/">vultr</a></li>
 					</ul>
 				</div>
 				<div class="favorites-list">
 					<ul>
+						<!-- Consooooom / General web stuff -->
 						<li><p></p></li>
 						<li><a href="https://odysee.com/">odysee</a></li>
 						<li><a href="https://startpage.com/">search</a></li>
-						<li><a href="https://ebay.co.uk">ebay</a></li>
-						<li><a href="http://boards.4chan.org/g/">/g/</a></li>
+						<li><a href="https://ebay.co.uk/">ebay</a></li>
+						<li><a href="http://boards.4chan.org/lit/">/lit/</a></li>
 						<li><a href="http://boards.4chan.org/his/">/his/</a></li>
 					</ul>
 				</div>
 				<div class="favorites-list">
 					<ul>
+						<!-- References/Wikis -->
 						<li><p></p></li>
-						<li><a href="https://en.wikipedia.org/wiki/Pro-form">pro-form</a></li>
+						<li><a href="https://vim.fandom.com/wiki/Vim_Tips_Wiki">vimtips</a></li>
 						<li><a href="https://www.cplusplus.com/reference/">cppref</a></li>
 						<li><a href="https://hoogle.haskell.org/">hoogle</a></li>
 						<li><a href="https://libgen.is/">libgen</a></li>
